welcome.lessons.welcome.instructions.InstructionsDrawG.scala.code
setCouleurBrosse(bleu)
baisseBrosse()
gauche()
avance()
baisseBrosse()
avance()
baisseBrosse()
avance()
baisseBrosse()
avance()
baisseBrosse()
gauche()
avance()
baisseBrosse()
avance()
baisseBrosse()
avance()
baisseBrosse()
avance()
baisseBrosse()
gauche()
avance()
baisseBrosse()
avance()
baisseBrosse()
avance()
baisseBrosse()
avance()
baisseBrosse()
gauche()
avance()
baisseBrosse()
avance()
baisseBrosse()
gauche()
avance()
baisseBrosse()



